--- a/Challenge CH 1/css/style.css
+++ b/Challenge CH 1/css/style.css
@@ -109,6 +109,8 @@
 #why-us .card-pro {
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 15px 15px 15px 15px;
+    height: 225px;
+    width: 300px;
 }
 
 #why-us .card-content {
@@ -122,4 +124,74 @@
 #why-us h3 {
     font-size: 20px;
     font-weight: bold;
+}
+
+#testimonial {
+    margin: 20px 0;
+}
+
+#testimonial .carousel-item {
+    padding: 5px 0;
+}
+
+#testimonial .card-testi {
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 15px 15px 15px 15px;
+    height: auto;
+}
+
+#testimonial .card-content {
+    padding: 20px;
+}
+
+#testimonial img {
+    padding: 50px 50px;
+}
+
+#cta-banner .container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #0D28A6;
+    height: 350px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+#cta-banner h2 {
+    padding: 50px 0;
+    color: white;
+    font-size: 2rem;
+}
+
+#cta-banner p {
+    padding-bottom: 25px;
+    color: white;
+    font-size: 1rem;
+    height: 2.5rem;
+}
+
+#cta-banner .btn.btn-secondary {
+    margin-top: 10px;
+    background-color: #5CB85F;
+    border: none;
+    font-size: 20px;
+}
+
+#cta-banner .btn.btn-secondary:hover {
+    background-color: #72e276;
+}
+
+#faq .container {
+    padding: 50px 0;
+}
+
+#faq .accordion-item {
+    margin: 20px 0;
+}
+
+#footer .blue {
+    background-color: #091B6F;
+    border-radius: 5px;
+    height: 34px;
+    width: 100px;
 }
